<resources>
    <string name="app_name">紫旭系统</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_huan">欢</string>
    <string name="login_ying">迎</string>
    <string name="login_deng">登</string>
    <string name="login_lu">录</string>
    <string name="login_zi">紫</string>
    <string name="login_xu">旭</string>
    <string name="login_xi">系</string>
    <string name="login_tong">统</string>
    <string name="login_namehint">请输入用户名</string>
    <string name="login_pwdhint">请输入密码</string>
    <string name="login_denglu">登录</string>
    <string name="loginPort">http://crm.1qfa.com/appInterface/appInterface1.ashx</string>
    <string name="listingPort">http://crm.1qfa.com/appInterface/PendRequisition1.ashx</string>
    <string name="detailsPort">http://crm.1qfa.com/appInterface/model1.ashx</string>
    <string name="surePort">http://crm.1qfa.com/appInterface/auditywd1.ashx</string>
    <string name="hqSurePort">http://crm.1qfa.com/appInterface/HQPass1.ashx</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>

</resources>
