<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ebefee"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="65px"
        android:layout_gravity="center"
        android:layout_marginTop="60px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_huan"
            android:textColor="#939e9a"
            android:textSize="28px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_ying"
            android:textColor="#939e9a"
            android:textSize="28px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_deng"
            android:textColor="#939e9a"
            android:textSize="28px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_lu"
            android:textColor="#939e9a"
            android:textSize="28px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_zi"
            android:textColor="#939e9a"
            android:textSize="28px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_xu"
            android:textColor="#939e9a"
            android:textSize="28px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_xi"
            android:textColor="#939e9a"
            android:textSize="28px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_tong"
            android:textColor="#939e9a"
            android:textSize="28px" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#d3d7d6" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginTop="150px"
        android:layout_gravity="center"
        android:scaleType="centerInside"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85px"
        android:layout_marginLeft="60px"
        android:layout_marginRight="60px"
        android:layout_marginTop="40px"
        android:background="@drawable/arrow"
        android:paddingLeft="20px"
        android:paddingRight="20px">

        <ImageView
            android:layout_width="24px"
            android:layout_height="32px"
            android:layout_marginLeft="30px"
            android:layout_marginTop="25px"
            android:src="@drawable/phone" />

        <EditText
            android:id="@+id/et_login_name"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="2px"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/login_namehint"
            android:paddingLeft="20px"
            android:singleLine="true"
            android:text=""
            android:textColor="#000000"
            android:textColorHint="#c9c9c9"
            android:textSize="28px" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85px"
        android:layout_marginLeft="60px"
        android:layout_marginRight="60px"
        android:background="@drawable/arrow1"
        android:paddingLeft="20px"
        android:paddingRight="20px">

        <ImageView
            android:layout_width="24px"
            android:layout_height="32px"
            android:layout_marginLeft="30px"
            android:layout_marginTop="25px"
            android:src="@drawable/psw" />


        <EditText
            android:id="@+id/et_login_pwd"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="2px"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/login_pwdhint"
            android:inputType="textPassword"
            android:paddingLeft="20px"
            android:singleLine="true"
            android:text=""
            android:textColor="#000000"
            android:textColorHint="#c9c9c9"
            android:textSize="28px" />


    </LinearLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="60px"
        android:layout_marginRight="60px"
        android:layout_marginTop="38px"
        android:background="@drawable/login_button"
        android:text="@string/login_denglu"
        android:textColor="#fff"
        android:textSize="36px" />
</LinearLayout>